# waves

./: .dprintrc.json  .gitignore  .mergify.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-entrypoint.sh  dprint.json  rust-toolchain.toml  waves-scripts
.cargo/: config
.github/workflows/: ci.yml
bobtimus/: Cargo.toml
bobtimus/migrations/2021-06-23-060023_set_up_liquidations/: down.sql  up.sql
bobtimus/proptest-regressions/: lib.txt
bobtimus/src/: amounts.rs  cli.rs  coin_selection.rs  database.rs  elements_rpc.rs  fixed_rate.rs  http.rs  kraken.rs  lib.rs  loan.rs  main.rs  pricing_models.rs  problem.rs  rendezvous.rs  routes.rs  schema.rs
coin_selection/: Cargo.toml
coin_selection/src/: lib.rs
covenants/: Cargo.toml
covenants/src/: happy_test.rs  lib.rs  protocol_tests.rs  stack_simulator.rs
docker/: Dockerfile  docker-entrypoint.sh  elements.conf
e2e_tests/: .gitignore  docker-compose.yml  e2e_test_setup.sh  package.json  readme.md
e2e_tests/nigiri/: docker-compose.yml
e2e_tests/src/: borrow.test.ts  create_wallet.test.ts  e2e.test.ts  unlock_wallet.test.ts  utils.ts  (+2 more)
elements-fun/: Cargo.toml  README.md
elements-fun/fuzz/: .gitignore  Cargo.toml  README.md  fuzz.sh
elements-fun/fuzz/fuzz_targets/: deserialize_block.rs  deserialize_output.rs  deserialize_transaction.rs
elements-fun/src/: address.rs  blech32.rs  block.rs  confidential.rs  dynafed.rs  encode.rs  fast_merkle_root.rs  hash_types.rs  internal_macros.rs  issuance.rs  lib.rs  main.rs  opcodes.rs  script.rs  sighash.rs  slip77.rs  transaction.rs  wally.rs
elements-harness/: Cargo.toml  Dockerfile  build.rs
elements-harness/src/: elementd_rpc.rs  image.rs  json_rpc.rs  lib.rs
estimate_transaction_size/: Cargo.toml
extension/: .env  .env.development  .eslintignore  .gitignore  ARCHITECTURE.md  Cargo.toml  bootstrap.js  config-overrides.js  package.json  rollup.config.js
extension/background/: Cargo.toml
extension/background/src/: lib.rs
extension/content/: Cargo.toml
extension/content/src/: lib.rs
extension/in_page/: Cargo.toml
extension/in_page/src/: lib.rs
extension/message_types/: Cargo.toml
extension/message_types/src/: bs_ps.rs  cs_bs.rs  ips_cs.rs  lib.rs
extension/public/: home.html  manifest.json
extension/rollup_config/: rollup_background.config.js  rollup_content.config.js  rollup_in_page.config.js  rollup_popup.config.js
extension/src/: App.tsx  Logo.tsx  app.rs  background-proxy.ts  event_bus.rs  index.tsx  lib.rs  messages.ts  models.ts  theme.tsx  type-utils.ts  walletHooks.ts  wallet_updater.rs  wasmProxy.ts
extension/src/background/: Cargo.toml  api.ts  index.ts
extension/src/background/src/: lib.rs
extension/src/background/wallet/: index.ts
extension/src/components/: AddressQr.tsx  Balances.tsx  ConfirmLoan.tsx  ConfirmLoanWizard.tsx  ConfirmSwap.tsx  CreateOrUnlockWallet.tsx  CreateWallet.tsx  OpenLoans.tsx  SwapItem.tsx  UnlockWallet.tsx  WithdrawAll.tsx  create_wallet.rs  create_wallet_form.rs  loan_info.rs  mod.rs  trade_info.rs  unlock_wallet_form.rs  wallet_details.rs
extension/src/content/: Cargo.toml
extension/src/content/src/: lib.rs
extension/src/contentScript/: index.ts
extension/src/extensionPage/: App.tsx  background-proxy.ts  index.tsx
extension/src/in-page/: impl.ts  index.ts
extension/src/in_page/: Cargo.toml
extension/src/options/: Options.css  Options.tsx  index.tsx
extension/src/wallet/: Cargo.toml
extension/src/wallet/src/: assets.rs  cache_storage.rs  wallet.rs
extension/src/wallet/src/wallet/: coin_selection.rs  make_create_swap_payload.rs  sign_and_send_swap_transaction.rs
extension/src/wasm_bindgen_extension/: Cargo.toml
extension/static/: background.html  manifest.json  popup.html
extension/wallet/: Cargo.toml  README.md  build.rs
extension/wallet/src/: assets.rs  cache_storage.rs  esplora.rs  lib.rs  logger.rs  macros.rs  runtime.rs  storage.rs  wallet.rs
extension/wallet/src/wallet/: create_new.rs  extract_loan.rs  extract_trade.rs  get_balances.rs  get_status.rs  get_transaction_history.rs  load_existing.rs  loan_backup.rs  make_create_swap_payload.rs  make_loan_request.rs  repay_loan.rs  sign_and_send_swap_transaction.rs  sign_loan.rs  withdraw_everything_to.rs
extension/wallet_lib/: Cargo.toml  README.md
extension/wallet_lib/src/: esplora.rs  lib.rs  logger.rs  storage.rs  wallet.rs
extension/wallet_lib/src/wallet/: coin_selection.rs  create_new.rs  extract_loan.rs  extract_trade.rs  get_address.rs  get_balances.rs  get_status.rs  make_create_swap_payload.rs  make_loan_request.rs  repay_loan.rs  sign_and_send_swap_transaction.rs  sign_loan.rs  withdraw_everything_to.rs
extension/wasm_bindgen_extension/: Cargo.toml
extension/wasm_bindgen_extension/src/: document.rs  lib.rs  port.rs  runtime.rs  tabs.rs  windows.rs
input/: Cargo.toml
landing_page/: LICENSE  README.md  package.json
my-app/: .eslintcache  config-overrides.js  package-lock.json  package.json
src/: elementd_rpc.rs  json_rpc.rs  lib.rs
swap/: Cargo.toml
swap/src/: lib.rs  states.rs
swap/tests/: happy_path.rs
wally/: Cargo.toml
wally/src/: lib.rs
waves/: .gitignore  config-overrides.js  cypress.json  docker-compose.yml  e2e_test_setup.sh  package.json
waves/src/wallet/: Cargo.toml  SwapWithWallet.tsx  UnlockWallet.tsx
waves/src/wallet-lib/: Cargo.toml  README.md
waves/src/wallet/src/: esplora.rs  lib.rs  macros.rs  storage.rs  wallet.rs
waves/wallet/: Cargo.toml  README.md  build.rs
waves/wallet/src/: assets.rs  cache_storage.rs  coin_selection.rs  esplora.rs  lib.rs  storage.rs  typed_js_future.rs  wallet.rs
waves/wallet/src/wallet/: coin_selection.rs  create_new.rs  decompose_transaction.rs  extract_trade.rs  get_address.rs  get_balances.rs  get_status.rs  load_existing.rs  make_create_buy_swap_payload.rs  make_create_sell_swap_payload.rs  make_create_swap_payload.rs  sign_and_send_swap_transaction.rs  unload_current.rs  withdraw_everything_to.rs
web-extension/: README.md  package.json
web-extension/wallet/: Cargo.toml
web-extension/wallet/src/: lib.rs
(+79 files in other folders)
