[workspace]
members = [
    "elements-harness",
    "swap",
    "bobtimus",
    "covenants",
    "extension",
    "extension/message_types",
    "extension/wallet_lib",
    "extension/background",
    "extension/content",
    "extension/in_page",
    "extension/wasm_bindgen_extension",
    "coin_selection",
    "estimate_transaction_size",
    "input",
    "web-extension/my-browser-extension/wallet"
]
