[package]
name = "bobtimus"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
covenants = { path = "../covenants" }
diesel = { version = "1.4", features = [ "sqlite" ] }
diesel_migrations = "1.4"
directories = "3.0"
elements = { version = "0.17", features = [ "serde-feature" ] }
elements-harness = { path = "../elements-harness" }
futures = { version = "0.3", default-features = false }
hex = "0.4"
hmac = "0.10"
http-api-problem = { version = "0.21", features = [ "warp" ] }
input = { path = "../input" }
log = "0.4"
mime_guess = "2.0.3"
reqwest = "0.11"
rust-embed = "5.7.0"
rust_decimal = "1.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.9"
structopt = "0.3"
swap = { path = "../swap" }
tempfile = "3.2"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tokio-tungstenite = { version = "0.13", features = [ "tls" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = [ "env-filter", "fmt", "json" ] }
warp = { version = "0.3", default-features = false }

[dev-dependencies]
testcontainers = "0.12"
