[package]
name = "covenants"
version = "0.1.0"
authors = [ "Philipp Hoenisch <philipp@hoenisch.at>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitcoin_hashes = "0.9.0"
elements = "0.15"
elements-harness = { path = "../elements-harness" }
env_logger = "0.8.3"
hex = "0.4"
hmac = "0.10"
log = "0.4"
secp256k1-zkp = { version = "0.2", features = [ "global-context", "hashes" ] }
sha2 = "0.9"
testcontainers = "0.11"
tokio = { version = "1", default-features = false, features = [ "macros", "rt", "time" ] }
