[package]
name = "covenants"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1"
bitcoin_hashes = "0.9.0"
coin_selection = { path = "../coin_selection" }
elements = "0.15"
elements-harness = { path = "../elements-harness" }
env_logger = "0.8.3"
estimate_transaction_size = { path = "../estimate_transaction_size" }
hex = "0.4"
hmac = "0.10"
log = "0.4"
secp256k1-zkp = { version = "0.2", features = [ "global-context", "hashes" ] }
sha2 = "0.9"
testcontainers = "0.12"
tokio = { version = "1", default-features = false, features = [ "macros", "rt", "time" ] }
