[package]
name = "elements-fun"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"
license = "CC0-1.0"
description = "Make it fun to work with the elements blockchain!"

[features]
default = [ "json-contract" ]
json-contract = [ "serde_json" ]
serde = [
    "bitcoin/use-serde",
    "serde-crate"
]
"fuzztarget" = [ ]

[dependencies]
bitcoin = { version = "0.26", features = [ "rand" ] }
bitcoin_hashes = "0.9.0" # While this dependency is included in bitcoin, we need this to use the macros.
hex = "0.4.2"
libc = "0.2.69"
secp256k1 = { version = "0.20.0", features = [ "bitcoin_hashes" ] }
secp256k1-zkp = { version = "0.2", features = [ "use-serde", "global-context", "hashes" ] }
serde-crate = { package = "serde", version = "1", optional = true, features = [ "derive" ] } # Used for ContractHash::from_json_contract.
serde_json = { version = "1", optional = true }
slip21 = "0.2.0"

[dev-dependencies]
rand = "0.6.5"
ryu = "<1.0.5"
serde_json = "1"
