[package]
name = "droplet"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
elements = { version = "0.13", features = ["serde-feature"] }
futures = "0.3.5"
hex = "0.4.2"
hmac = "0.10"
jsonrpc_client = { git = "https://github.com/thomaseizinger/rust-jsonrpc-client", rev = "8fe8c47ddde6d7d50afe49b3075f3a97dc7d52ab", features = ["reqwest"] }
log = "0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json", "native-tls"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
testcontainers = "0.11"
thiserror = "1.0"
tokio = { version = "0.2", default-features = false, features = ["blocking", "macros", "rt-core", "time"] }
tracing = "0.1"
url = "2"

[features]
default = []
