[package]
name = "elements-harness"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin_hashes = "0.9.0"
elements = { version = "0.15", features = [ "serde-feature" ] }
futures = "0.3.5"
hex = "0.4.2"
hmac = "0.10"
jsonrpc_client = { version = "0.6", features = [ "reqwest" ] }
log = "0.4"
rand = "0.8"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
testcontainers = "0.12"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [ "macros", "rt", "time" ] }
tracing = "0.1"
url = "2"

[features]
default = [ ]
