[package]
name = "waves_wallet"
version = "0.2.0"
authors = [ "Philipp Hoenisch <philipp@hoenisch.at" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
console_error_panic_hook = { version = "0.1.6" }
futures = "0.3"
js-sys = "0.3"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
url = "2"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.47"
features = [
    'Document',
    'HtmlHeadElement',
    'HtmlScriptElement',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]
