[package]
name = "waves_wallet"
version = "0.2.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
anyhow = "1.0"
conquer-once = "0.3"
console_error_panic_hook = { version = "0.1.6" }
elements = { version = "0.15", features = [ "serde-feature" ] }
futures = "0.3"
futures-timer = { version = "3", features = [ "wasm-bindgen" ] }
js-sys = "0.3"
log = "0.4"
message_types = { path = "./message_types" }
qrcode = { version = "0.12", default-features = false, features = [ "svg" ] }
reqwest = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
url = "2"
wallet = { path = "./wallet_lib" }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-extension = { path = "./wasm_bindgen_extension" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
ybc = "0.1"
yew = "0.17.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.47"
features = [
    'Document',
    'HtmlHeadElement',
    'HtmlScriptElement',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]
