[package]
name = "swap"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
elements-fun = { path = "../elements-fun", features = [ "serde", "wally-sys" ] }
elements-harness = { path = "../elements-harness" }
rand = "0.6"
secp256k1 = { version = "0.19.0", features = [ "global-context" ] }
serde = { version = "1", features = [ "derive" ] }
sha2 = "0.9"

[dev-dependencies]
testcontainers = "0.11"
tokio = { version = "0.2", default-features = false, features = [ "blocking", "macros", "rt-core", "time" ] }
