[package]
name = "swap"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
elements-fun = { path = "../elements-fun", features = [ "serde" ] }
secp256k1 = { version = "0.20.0", features = [ "bitcoin_hashes", "rand" ] }
serde = { version = "1", features = [ "derive" ] }
sha2 = "0.9"

[dev-dependencies]
elements-harness = { path = "../elements-harness" }
testcontainers = "0.11"
tokio = { version = "0.2", default-features = false, features = [ "blocking", "macros", "rt-core", "time" ] }
