[package]
name = "swap"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
elements = "0.15"
estimate_transaction_size = { path = "../estimate_transaction_size" }
secp256k1 = { version = "0.20", features = [ "bitcoin_hashes", "rand" ] }
serde = { version = "1", features = [ "derive" ] }
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
elements-harness = { path = "../elements-harness" }
testcontainers = "0.11"
tokio = { version = "1", default-features = false, features = [ "macros", "rt", "time" ] }
