[package]
name = "background"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
conquer-once = "0.3"
console_error_panic_hook = "0.1.6"
elements = { version = "0.16", features = [ "serde-feature" ] }
futures = "0.3"
js-sys = "0.3"
log = "0.4"
message_types = { path = "../message_types" }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1"
wallet = { path = "../wallet_lib" }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-extension = { path = "../wasm_bindgen_extension" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Storage",
    "Cache",
    "CacheStorage"
]
