[package]
name = "in_page"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
futures = "0.3"
js-sys = "0.3"
log = "0.4"
message_types = { path = "../message_types" }
serde = { version = "1.0", features = [ "derive" ] }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-extension = { path = "../wasm_bindgen_extension" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.47"
features = [
    'Document',
    'HtmlHeadElement',
    'HtmlScriptElement',
    'Element',
    'HtmlElement',
    'Node',
    'Window'
]

[features]
default = [ "console_error_panic_hook" ]
