[package]
name = "in_page"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
elements = { version = "0.17", features = [ "serde-feature" ] }
futures = "0.3"
hex = "0.4"
js-sys = "0.3"
log = "0.4"
message_types = { path = "../message_types" }
serde = { version = "1.0", features = [ "derive" ] }
wallet = { path = "../wallet_lib" }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.47"
features = [
    'Document',
    'HtmlHeadElement',
    'HtmlScriptElement',
    'Element',
    'HtmlElement',
    'Node',
    'Window'
]

[features]
default = [ "console_error_panic_hook" ]
