[package]
name = "message_types"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements = { version = "0.15", features = [ "serde-feature" ] }
js-sys = "0.3"
rust_decimal = "1"
serde = { version = "1.0", features = [ "derive" ] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
wallet = { path = "../wallet_lib" }
