[package]
name = "message_types"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coin_selection = { path = "../../coin_selection" }
elements = { version = "0.15", features = [ "serde-feature" ] }
js-sys = "0.3"
rust_decimal = "1"
serde = { version = "1.0", features = [ "derive" ] }
wallet = { path = "../wallet_lib" }
