[package]
name = "tmp-wallet"
version = "0.1.0"
authors = [ "Philipp Hoenisch <philipp@hoenisch.at>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "console_error_panic_hook" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3"
log = "0.4"
wallet = { path = "../../extension/wallet_lib" }


# By default wasm-opt is true which makes the build fail.
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [ "Window", "Storage", "Cache", "CacheStorage" ] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
