[package]
name = "tmp-wallet"
version = "0.1.0"
authors = [ "Philipp Hoenisch <philipp@hoenisch.at>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
covenants = { path = "../../covenants" }
js-sys = "0.3"
log = "0.4"
wallet = { path = "../../extension/wallet_lib", features = [ "console_error_panic_hook" ] }


# By default wasm-opt is true which makes the build fail.
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [ "Window", "Storage", "Cache", "CacheStorage" ] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
