[package]
name = "wallet-lib"
version = "0.1.0"
authors = [ "Philipp Hoenisch <philipp@hoenisch.at>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "console_error_panic_hook" ]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
log = "0.4"
wasm-bindgen = "0.2.63"
wasm-logger = "0.2"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

# By default wasm-opt is true which makes the build fail.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
